 * Fixed issue #3631: Log: filtering commits by file path does not work if slash is used as path separator
   The Log Dialog now uses only the Git path (with slashes) for filtering. This is now consistent with other path filters in TortoiseGit.

== Features ==
 * Fixed issue #3654: Allow to completely disable the turtle animation, added TortoiseGit advanced setting "DownloadAnimation"

== Bug Fixes ==
 * Fixed issue #3649: "multi-project pull/fetch/push" not working
 * Fixed issue #3652: Clone: Auto fill from clipboard with URLs with quotes fails
 * Fixed issue #3651: View Patch window shrinks each time it opens with high DPI
 * TortoiseGitMerge: Make column index 1 based as most editors are 1-based instead of instead of 0 based

= Release 2.11.0 =
Released: 2020-10-10

== Bug Fixes ==
 * Fixed issue #3593: Statistics dialog - misaligned controls
 * Fixed issue #3598: TGitCache blocks repository directory to be truly deleted
 * Fixed issue #3619: Hook settings always reset "Hide the script while running" to checked for hooks stored in .tgitconfig
 * Fixed issue #3617: 'Saving config failed (key: "fetch.prune", value: "")' in remote repository definition when `fetch.prune` is set in global config
 * Fixed issue #3632: Log dialog: Message box with the text "git_get_commit_from_hash failed for 00...00" appears in certain situations
 * Fixed issue #3638: Better handling of trying to set an upstream branch not set to be fetched in the remote

== Features ==
 * Update Scintilla to 4.4.5
 * Fixed issue #3348: Showing line and column number in the status line of TortoiseGitMerge
 * Fixed issue #3408: TortoiseGitMerge: When double clicking on a word, mark the word only in the current view if also the Ctrl key is pressed
 * TortoiseGitMerge: Show the number of marked words in the status bar
 * Fixed issue #2101: Tortoise(Git)Merge - 'find' workflow suggested enhancement: Add "Search next" and "Search previous" to the ribbon